# GridSeq

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: TEST_STRATEGY.md
engine/: CMakeLists.txt
engine/include/gridseq/: DrumSynth.h  LockFreeFifo.h  Pattern.h  SamplerVoice.h  SequencerEngine.h  StateCodec.h
engine/src/: Pattern.cpp  SamplerVoice.cpp  SequencerEngine.cpp  StateCodec.cpp
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  test_drumsynth.cpp  test_lockfree_fifo.cpp  test_sampler_voice.cpp  test_sequencer_timing.cpp  test_smoke.cpp  test_state.cpp  test_swing.cpp
tools/: CMakeLists.txt  build-plugin-msvc.ps1  qa_render_check.py  render_cli.cpp
